# Mesannepada

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
data/Profiles/AndroidRaytracing/: VK_SAH_andoird_raytracing.json  VK_SAH_android_raytracing.json  vp_gpuinfo_alps_k6985v1_64_8gb_mcl50_38_1_0_android_13_0.json  vp_gpuinfo_alps_k6989v1_64_44_0_0_android_14_0.json  vp_gpuinfo_ayn_odin2_512_676_0_android_13_0.json  vp_gpuinfo_meizu_meizu_20_pro_512_676_0_android_13_0.json  vp_gpuinfo_motorola_xt2301_5_512_676_0_android_14_0.json  vp_gpuinfo_nubia_nx769j_512_744_1_android_14_0.json  vp_gpuinfo_oculus_quest_3_512_746_0_android_12_0.json  vp_gpuinfo_oneplus_cph2573_512_744_8_android_14_0.json  vp_gpuinfo_oneplus_pja110_512_676_0_android_13_0.json  vp_gpuinfo_samsung_sm_s901b_2_0_0_android_14_0.json  vp_gpuinfo_samsung_sm_s9110_512_676_0_android_13_0.json  vp_gpuinfo_samsung_sm_x816b_512_676_0_android_14_0.json  vp_gpuinfo_sony_sog10_512_676_0_android_13_0.json  vp_gpuinfo_vivo_i2212_512_676_0_android_13_0.json  vp_gpuinfo_vivo_v2324a_44_1_0_android_14_0.json  vp_gpuinfo_xiaomi_21121210g_512_676_0_android_13_0.json  vp_gpuinfo_xiaomi_2211133g_512_744_4_android_13_0.json  vp_gpuinfo_xiaomi_23117rk66c_512_744_6_android_14_0.json  vp_gpuinfo_xiaomi_m2012k11ag_512_744_16_android_13_0.json  vp_gpuinfo_xiaomi_poco_f2_pro_512_502_0_android_13_0.json  vp_gpuinfo_xiaomi_redmi_k30_pro_zoom_edition_512_615_0_android_12_0.json
data/Profiles/Pixel7Pro/: vp_gpuinfo_google_pixel_7_pro_46_0_0_android_14_0.json
data/config/: scalability.toml
data/fonts/correction-tape-font/: info.txt
data/game/: SM_PlayerArms.glb  SM_PlayerArms.glb.import  icon.svg.import  project.godot
data/game/boats/: LoadedCoracle.tscn  (+6 more)
docs/: DrawingMeshes.md  EntityLifecycle.md  InfrastructureDocs.md  Renderer.md  Scenes.md  jira.md  prefabs.md
docs/GPDirect2025/: VideoScript.md
docs/Game/: Credits.md  GameObjects.md
docs/Performance/: Overview.md
docs/render/: Transparents.md
docs/ui/: DesignLanguage.md
src/engine/: README.md  SahCore.cmake
src/game/: README.md  WindowsSettings.cap  mesannepada.cmake
tools/: Optimize-Textures.ps1  Remove-CompiledShaders.ps1  compile_shaders.py  optimize_gltf.py
(+741 files in other folders)
